@@ -1,8 +1,8 @@
 <?php
 header("Content-type: application/json; charset=utf-8");
 
-$stagewords = ["dx", "ro", "splitz", "tnr", "bg", "snr", "monkey", "indie"];
-$flagwords = ["context", "world"];
+$stagewords = ["-dx", "-ro", "-splitz", "-tnr", "-bg", "-snr", "-monkey", "-indie"];
+$flagwords = ["-context", "-world", "-log"];
 $world_prefix = ["World", "Floor", "Stage"];
 
 $stage_lists = [
@@ -18,36 +18,63 @@ $stage_lists = [
 $stage_firsthalf = [];
 $stage_secondhalf = [];
 $stage_fullname = [];
+$stage_context = [];
+$enabled_flags = [];
 
 #$args = $argv;
-$input = htmlentities($_GET['input']);
+if(isset($_GET['input']))
+    $input = htmlentities($_GET['input']);
+else
+    $input = "";
+if(isset($_GET['parse']))
+    $parse = htmlentities($_GET['parse']);
+else
+    $parse = "";
 $args = explode(" ", $input);
 $check_arg = array_intersect($args, $stagewords);
 
 $enable_world = false;
 $enable_context = false;
+$enable_log = false;
 
 if(count($args) == 1) # if there's exactly 1 argument
 {
     # check if the arguments are the ones that should halt the program
-    if($args[0] == "createdby")
+    if($args[0] == "-createdby")
     {
         echo("Poopster created by @AnvilSP | https://anvilsp.com/poopster");
         exit();
     }
-    else if ($args[0] == "help")
+    else if ($args[0] == "-help")
     {
-        echo("Poopster combines two stage names from the following games (these can be used as parameters): [dx] Deluxe [tnr] Touch & Roll [snr] Step & Roll [splitz] Banana Splitz [ro] Rolled Out! [bg] BALLYGON. Use [world] to display a random stage number, [context] to display full stage names, [monkey] to randomize only stages from Super Monkey Ball, or [indie] for only stages from indie games on the list.");
+        echo("Poopster combines two stage names from various marble rollers, including various entries from the Super Monkey Ball series, Rolled Out!, and BALLYGON. Use -games for the full list of games or -modifiers for a list of modifiers. | https://anvilsp.com/poopster");
+        exit();
+    }
+    else if ($args[0] == "-games")
+    {
+        echo("[Super Monkey Ball] -dx (Deluxe/2/BM) | -tnr (Touch & Roll) | -snr (Step & Roll) | -splitz (Banana Splitz) || [Indies] -ro (Rolled Out!) | -bg (BALLYGON) || -monkey for only Monkey Ball stages, -indie for only indie stages [Parameters can be combined]");
+        exit();
+    }
+    else if ($args[0] == "-modifiers")
+    {
+        echo("MODIFIERS: -context (Display stage names), -world (Generate a stage number), -log (Save the output to the log file), -viewlog (View the log file)");
+        exit();
+    } else if ($args[0] == "-viewlog")
+    {
+        echo("https://anvilsp.com/poopster/log.txt");
         exit();
     }
 }
-if(in_array("world", $args))
+if(in_array("-world", $args))
 {
     $enable_world = true;
 }
-if(in_array("context", $args))
+if(in_array("-context", $args))
 {
     $enable_context = true;
+}
+if(in_array("-log", $args)){
+    $enable_log = true;
 }
 
 $extra_args = $args;
@@ -57,6 +84,9 @@ $final_seed = "";
 foreach($extra_args as $word => $entry) {
     if(in_array($entry, $stagewords) || in_array($entry, $flagwords) || $entry == basename(__FILE__))
     {
+        if(!in_array($entry, $flagwords)) {
+            array_push($enabled_flags, $entry);
+        }
         unset($extra_args[$word]);
     }
 }
@@ -84,9 +114,26 @@ function append_from_txt($arr, $path) {
     return $arr;
 }
 
+function append_with_name($arr1, $arr2, $path, $name) {
+    # append stagename with game name for context
+    if($file = fopen($path, "r")) {
+        while(!feof($file)) {
+            $line = fgets($file);
+            # append to one array
+            array_push($arr1, $line);
+            # append to the other array
+            array_push($arr2, $name);
+        }
+        fclose($file);
+        return array($arr1, $arr2);
+    }
+}
+
 function append_stages(string $game_name) {
-    global $stage_lists, $stage_fullname, $stage_firsthalf, $stage_secondhalf; # why do i gotta do that
-    $stage_fullname = append_from_txt($stage_fullname, $stage_lists[$game_name][0]);
+    global $stage_lists, $stage_fullname, $stage_firsthalf, $stage_secondhalf, $stage_context; # why do i gotta do that
+    $append_fullname = append_with_name($stage_fullname, $stage_context, $stage_lists[$game_name][0], $game_name);
+    $stage_fullname = $append_fullname[0];
+    $stage_context = $append_fullname[1];
     $stage_firsthalf = append_from_txt($stage_firsthalf, $stage_lists[$game_name][1]);
     $stage_secondhalf = append_from_txt($stage_secondhalf, $stage_lists[$game_name][2]);
 }
@@ -109,51 +156,91 @@ function generate_world() {
 }
 
 # Append stages based on arguments
-if(in_array("dx", $args) || in_array("monkey", $args) || empty($check_arg)) {
+if(in_array("-dx", $args) || in_array("-monkey", $args) || empty($check_arg)) {
     # Super Monkey Ball Deluxe / Banana Mania / 2; args: dx, monkey    
     append_stages("dx");
 }
-if(in_array("tnr", $args) || in_array("monkey", $args) || empty($check_arg)) {
+if(in_array("-tnr", $args) || in_array("-monkey", $args) || empty($check_arg)) {
     # Super Monkey Ball: Touch & Roll; args: tnr, monkey    
     append_stages("tnr");
 }
-if(in_array("snr", $args) || in_array("monkey", $args) || empty($check_arg)) {
+if(in_array("-snr", $args) || in_array("-monkey", $args) || empty($check_arg)) {
     # Super Monkey Ball: Step & Roll; args: snr, monkey    
     append_stages("snr");
 }
-if(in_array("splitz", $args) || in_array("monkey", $args) || empty($check_arg)) {
+if(in_array("-splitz", $args) || in_array("-monkey", $args) || empty($check_arg)) {
     # Super Monkey Ball: Banana Splitz; args: splitz, monkey    
     append_stages("splitz");
 }
-if(in_array("ro", $args) || in_array("indie", $args) || empty($check_arg)) {
+if(in_array("-ro", $args) || in_array("-indie", $args) || empty($check_arg)) {
     # Rolled Out!; args: ro, indie
     append_stages("ro");
 }
-if(in_array("bg", $args) || in_array("indie", $args) || empty($check_arg)) {
+if(in_array("-bg", $args) || in_array("-indie", $args) || empty($check_arg)) {
     # BALLYGON; args: bg, indie
     append_stages("bg");
 }
 
-# Random generation
-$world = generate_world();
-$stage1 = rand(0, (count($stage_fullname) - 1));
-$stage2 = rand(0, (count($stage_fullname) - 1));
-$final_string = "";
-
-# append world if it's called for
-if($enable_world) {
-    $final_string = $final_string . $world . " - ";
+function generate_stage() {
+    global $stage_fullname, $stage_firsthalf, $stage_secondhalf, $stage_context, $final_seed, $enabled_flags;
+    # Random generation
+    $world = generate_world();
+    $stage1 = rand(0, (count($stage_fullname) - 1));
+    $stage2 = rand(0, (count($stage_fullname) - 1));
+    $final_array = array(
+        "stagename" => spacify(trim($stage_firsthalf[$stage1]) . trim($stage_secondhalf[$stage2])),
+        "first_stage" => spacify(trim($stage_fullname[$stage1])),
+        "second_stage" => spacify(trim($stage_fullname[$stage2])),
+        "first_context" => $stage_context[$stage1],
+        "second_context" => $stage_context[$stage2],
+        "world" => $world,
+        "flags" => $enabled_flags,
+        "seed" => isset($final_seed) ? trim($final_seed) : null
+    );
+    return $final_array;
 }
 
-$final_string = $final_string . spacify(trim($stage_firsthalf[$stage1]) . trim($stage_secondhalf[$stage2]));
+$final_stage = generate_stage();
 
-# append the stage context if it's called for
-if($enable_context){
-    $final_string = $final_string . ";[" . spacify(trim($stage_fullname[$stage1])) . " and " . spacify(trim($stage_fullname[$stage2])) . "]";
+if($parse == "web") {
+    print_r(json_encode($final_stage));
 }
+else{
+    $final_string = "";
 
-# print the final string
-print($final_string);
+    # append world if it's called for
+    if($enable_world) {
+        $final_string = $final_string . $final_stage['world'] . " - ";
+    }
+
+    $final_string = $final_string . $final_stage['stagename'];
+
+    # append the stage context if it's called for
+    if($enable_context){
+        $final_string = $final_string . " (" . $final_stage['first_stage'] . " [" . $final_stage['first_context'] 
+        . "] and " . $final_stage['second_stage'] . " [" . $final_stage['second_context'] . "])";
+    }
+
+    if($enable_log) {
+        $store_str = "!poopster";
+        if(!empty($final_stage['flags'])) {
+            foreach($final_stage['flags'] as $word)
+            {
+                $store_str = trim($store_str . " " . $word);
+            }
+        }
+        if($final_stage['seed'] != "")
+            $store_str = $store_str . " " . $final_stage['seed'] . " = " . $final_stage['stagename'];
+        else
+            $store_str = $final_stage['stagename'];
+        $log_file = fopen("log.txt", "a") or die("Could not find log file!");
+        fwrite($log_file, "\n".$store_str);
+        fclose($log_file);
+    }
+
+    # print the final string
+    print($final_string);
+}
 
 function spacify($var) {
     return str_replace('_', ' ', $var);
